change to vue2.0

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>games</title>
   </head>
   <body>
-    <app></app>
+    <div id="app">
+      <app></app>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
